exams/ckad-simulation10/manifests/setup/q01-webapp-pod.yaml
# Q1: Pod with hardcoded environment variables (to be converted to Secret)
---
apiVersion: v1
kind: Pod
metadata:
  name: webapp
  namespace: fortress
  labels:
    app: webapp
spec:
  containers:
  - name: webapp
    image: nginx:1.25
    ports:
    - containerPort: 80
