exams/ckad-simulation10/manifests/setup/q13-web-server.yaml
# Q13: Initial deployment for rollback exercise (revision 1)
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  namespace: citadel
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
      - name: web-server
        image: nginx:1.24
        ports:
        - containerPort: 80
