exams/ckad-simulation10/manifests/setup/q03-api-server.yaml
# Q3: Pre-existing Deployment and Service for Ingress creation
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
  namespace: citadel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
      - name: api-server
        image: nginx:1.25
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: citadel
spec:
  type: ClusterIP
  selector:
    app: api-server
  ports:
  - port: 80
    targetPort: 80
